--- a/bio.html
+++ b/bio.html
@@ -4,15 +4,47 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Andrew's Portfolio</title>
-    <!-- Link to your external stylesheet -->
     <link rel="stylesheet" href="styles.css" />
+    <style>
+      .container-bio {
+        margin: 20px auto;
+        width: 80%;
+        max-width: 1200px;
+        background-color: #fff;
+        padding: 20px;
+        border-radius: 8px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      }
+
+      /* Example styling for the 4-column layout */
+      .four-columns {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+        gap: 20px;
+        margin: 20px auto;
+        width: 80%;
+        max-width: 1200px;
+      }
+      .column {
+        background-color: #fff;
+        padding: 20px;
+        border-radius: 8px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      }
+      .column h3 {
+        margin-top: 0;
+        color: #0073e6;
+      }
+      .column p {
+        line-height: 1.6;
+      }
+    </style>
 </head>
 <body>
   <header>
     <h1>About Me</h1>
   </header>
 
-  <!-- Navigation Bar -->
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
@@ -21,10 +53,45 @@
     </ul>
   </nav>
 
-  <div class="container">
+  <div class="container-bio">
     <h2>Who Am I?</h2>
     <p>I’m a software engineer with a passion for front-end and back-end development. I love learning new technologies and exploring AI, Python, and Go.</p>
   </div>
+
+  <!-- New Section: Four Columns -->
+  <section class="four-columns">
+    <div class="column">
+      <h3>Professional Software Developer</h3>
+      <p>
+        My primary focus is building robust applications, utilizing modern 
+        frameworks and languages. Currently delving deeper into AI and 
+        data analytics.
+      </p>
+    </div>
+    <div class="column">
+      <h3>Personal Hobbies</h3>
+      <p>
+        Outside of coding, I enjoy hiking, painting miniatures, and 
+        playing music. These activities fuel my creativity and keep me 
+        balanced.
+      </p>
+    </div>
+    <div class="column">
+      <h3>Charity Work</h3>
+      <p>
+        I volunteer with a local non-profit, helping organize tech 
+        workshops for underprivileged communities.
+      </p>
+    </div>
+    <div class="column">
+      <h3>My Business</h3>
+      <p>
+        I run a small studio for game design and storytelling. I love 
+        creating immersive worlds, unique mechanics, and compelling 
+        narratives.
+      </p>
+    </div>
+  </section>
 
   <footer>
     &copy; 2025 Andrew's Portfolio
