correct bio column topics

--- a/bio.html
+++ b/bio.html
@@ -61,17 +61,18 @@
   <!-- New Section: Four Columns -->
   <section class="four-columns">
     <div class="column">
-      <h3>Professional Software Developer</h3>
+      <h3>Software Developer</h3>
       <p>
-        My primary focus is building robust applications, utilizing modern 
-        frameworks and languages. Currently delving deeper into AI and 
-        data analytics.
+        I have been a software engineer for over nine years. 
+        Coding programs and solutions has given me an opportunity to find creativity and experimentation in my professional career.
+        Part of what I love about software development is that I am not limited to learn and explore by my workspace. I am free to 
+        study and research what I'm interested in on my time.
       </p>
     </div>
     <div class="column">
       <h3>Personal Hobbies</h3>
       <p>
-        Outside of coding, I enjoy hiking, painting miniatures, and 
+        Outside of coding, I enjoy tabletop games and roleplaying, painting miniatures, and 
         playing music. These activities fuel my creativity and keep me 
         balanced.
       </p>
@@ -79,8 +80,9 @@
     <div class="column">
       <h3>Charity Work</h3>
       <p>
-        I volunteer with a local non-profit, helping organize tech 
-        workshops for underprivileged communities.
+        I volunteer for a non-profit on water conservation. 
+        I believe in leaving a place better then how I found it. 
+        Here, I get to practice that.
       </p>
     </div>
     <div class="column">
