--- a/bio.html
+++ b/bio.html
@@ -76,6 +76,9 @@
         playing music. These activities fuel my creativity and keep me 
         balanced.
       </p>
+      <p>
+        As a Marine Veteran, 
+      </p>
     </div>
     <div class="column">
       <h3>Charity Work</h3>
