starting resume in bio

--- a/bio.html
+++ b/bio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Andrew's Portfolio</title>
+    <title>My Bio</title>
     <link rel="stylesheet" href="styles.css" />
     <style>
       .container-bio {
@@ -15,8 +15,6 @@
         border-radius: 8px;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
       }
-
-      /* Example styling for the 4-column layout */
       .four-columns {
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
@@ -68,6 +66,7 @@
         Part of what I love about software development is that I am not limited to learn and explore by my workspace. I am free to 
         study and research what I'm interested in on my time.
       </p>
+      <a href="bio-resume.html"><button class="link-button">See my resume</button></a>
     </div>
     <div class="column">
       <h3>Personal Hobbies</h3>
