renaming non-profit work and adding more to resume

--- a/bio-resume.html
+++ b/bio-resume.html
@@ -6,7 +6,7 @@
         <title>My Career</title>
         <link rel="stylesheet" href="styles.css" />
     </head>
-    <body>
+    <body id="top">
         <div class="nav-container">
             <a href="bio.html"><button class="link-button">Back</button></a>
             <a href="index.html"><button class="link-button">Home</button></a>
@@ -40,14 +40,52 @@
                 While the company had changed names several times, I had the opportunity to work on the Next Generation 911 (ng911) project. 
                 This project was a service offered to emergency call centers around the nation and provided geolocation data for Multiline, VOIP, and Wireless calls in compliance of Kari's Law.
             </p>
+            <p>
+                What was fun was that I had been asked to come back to continue on the project further until I was given the opportunity to lead my own team at Antech.
+            </p>
             <h3>ng911 Project</h3>
             <ui>
                 <li>React</li>
                 <li>Kotlin backend with no-sql database with MongoDB</li>
             </ui>
         </div>
+        <div class="container">
+            <h1>Various roles</h1>
+            <h3>March 2021 to March 2022</h3>
+            <p>
+                This year I had the chance for multiple opportunities. 
+                One was for a small startup in Healthcare Engagement, another was a contract for a data forensics application. 
+                Finally, I went for a position that turned out to be strictly a devops position instead of a development role.
+            </p>
+            <h3>Senior Software Engineer</h3>
+            <p>Contract position to develop a data forensics application</p>
+            <ul>
+                <li>Web API program in Golang 1.17</li>
+                <li>Designed to scan large hard drives and ISOs, cataloging files and contents</li>
+            </ul>
+            <h3>Software Infrastructure Engineer</h3>
+            <ul>
+                <li>CLI program using Golang to automate helm charts</li>
+            </ul>
+            <h3>Software engineer</h3>
+            <p>Small startup position to build a mobile application for Healthcare Engagement</p>
+            <ul>
+                <li>Backend API in Golang 1.15 and PostgreSQL database</li>
+            </ul>
+        </div>
+        <div class="container">
+            <h1>Software Engineer at NIC</h1>
+            <h3>December 2019 to March 2021</h3>
+            <p>
+
+            </p>
+        </div>
+        <div class="container">
+            <h1>Software Engineer at Vertafore</h1>
+            <h3>September 2017 to December 2018</h3>
+        </div>
     </body>
     <footer>
-
+        <a href="#top">Back to Top</a>
     </footer>
 </html>
