--- a/bio.html
+++ b/bio.html
@@ -80,7 +80,7 @@
       </p>
     </div>
     <div class="column">
-      <h3>Charity Work</h3>
+      <h3>Non-profit Work</h3>
       <p>
         I volunteer for a non-profit on water conservation. 
         I believe in leaving a place better then how I found it. 
