--- a/bio.html
+++ b/bio.html
@@ -5,40 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>My Bio</title>
     <link rel="stylesheet" href="styles.css" />
-    <style>
-      .container-bio {
-        margin: 20px auto;
-        width: 80%;
-        max-width: 1200px;
-        background-color: #fff;
-        padding: 20px;
-        border-radius: 8px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-      }
-      .four-columns {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-        gap: 20px;
-        margin: 20px auto;
-        width: 80%;
-        max-width: 1200px;
-      }
-      .column {
-        background-color: #fff;
-        padding: 20px;
-        border-radius: 8px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-      }
-      .column h3 {
-        margin-top: 0;
-        color: #0073e6;
-      }
-      .column p {
-        line-height: 1.6;
-      }
-    </style>
 </head>
-<body>
+<body class="page-content">
   <header>
     <h1>About Me</h1>
   </header>
@@ -66,7 +34,11 @@
         Part of what I love about software development is that I am not limited to learn and explore by my workspace. I am free to 
         study and research what I'm interested in on my time.
       </p>
-      <a href="bio-resume.html"><button class="link-button">See my resume</button></a>
+      <a href="bio-resume.html" class="align-bottom align-center">
+        <button class="link-button">
+          See my resume
+        </button>
+      </a>
     </div>
     <div class="column">
       <h3>Personal Hobbies</h3>
@@ -94,6 +66,9 @@
         creating immersive worlds, unique mechanics, and compelling 
         narratives.
       </p>
+      <a href="bfs.html" class="align-bottom align-center">
+        <button class="link-button-wide">Blue Falcon Studios</button>
+      </a>
     </div>
   </section>
 
