--- a/bio.html
+++ b/bio.html
@@ -19,7 +19,7 @@
     </ul>
   </nav>
 
-  <div class="container-bio">
+  <div class="container">
     <h2>Who Am I?</h2>
     <p>I’m a software engineer with a passion for front-end and back-end development. I love learning new technologies and exploring AI, Python, and Go.</p>
   </div>
@@ -58,6 +58,9 @@
         I believe in leaving a place better then how I found it. 
         Here, I get to practice that.
       </p>
+      <a href="nff.html" class="align-bottom align-center">
+        <button class="link-button-xl">National Freshwater Foundation</button>
+      </a>
     </div>
     <div class="column">
       <h3>My Business</h3>
